// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/message/demo/duration.md correctly 1`] = `
<button
  class="ant-btn ant-btn-flat"
  type="button"
>
  <span>
    Customized display duration
  </span>
  <div
    class="ant-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/message/demo/info.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-flat"
  type="button"
>
  <span>
    Display normal message
  </span>
  <div
    class="ant-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/message/demo/loading.md correctly 1`] = `
<button
  class="ant-btn ant-btn-flat"
  type="button"
>
  <span>
    Display a loading indicator
  </span>
  <div
    class="ant-ripple-wrapper"
  />
</button>
`;

exports[`renders ./components/message/demo/other.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Success
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Error
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      Warning
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
</div>
`;

exports[`renders ./components/message/demo/placement.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      topLeft
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      top
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      topRight
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      leftTop
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      left
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      leftBottom
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      rightTop
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      right
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      rightBottom
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      bottomLeft
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      bottom
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <button
    class="ant-btn ant-btn-flat"
    type="button"
  >
    <span>
      bottomRight
    </span>
    <div
      class="ant-ripple-wrapper"
    />
  </button>
</div>
`;
